--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-	"name": "exo-workflow",
+	"name": "say_hello_ed",
 	"version": "1.0.0",
 	"scripts": {
+		"start": "node src/app.js",
 		"test": "jest"
 	},
 	"devDependencies": {
